--- a/GT_users/templates/user_app/index.html
+++ b/GT_users/templates/user_app/index.html
@@ -2,13 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title></title>
   </head>
   <body>
 
-    <h1> Working </h1>
+    <div class="container">
 
-    <h2>User List</h2>
+      <div class="jumbotron">
+
+        <h1> Welcome !.. </h1>
+
+        <h2>Go to / users  signup Page</h2>
+
+      </div>
+
+    </div>
+
+
 
   </body>
 </html>
