--- a/GT_templates_urls/templates/templates_app/index.html
+++ b/GT_templates_urls/templates/templates_app/index.html
@@ -3,4 +3,11 @@
   {% block body_block %}
     <h1>Welocme to Index </h1>
     <h2>This is the Index.html page showing </h2>
+
+    <!-- <h3> {{text | title}}</h3> -->
+    <h3>{{number | add:"99"}}</h3>
+
+    <h4>{{text| cut:'Hello'}}</h4>
+
+
     {% endblock%}
