--- a/myproject/templates/myapp/index.html
+++ b/myproject/templates/myapp/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Myapp</title>
-  </head>
-  <body>
 
-    <h1>This is my project </h1>
+{% extends "myapp/base.html"  %}
+{% block body_block %}
 
-  </body>
-</html>
+
+<div class="jumbotron">
+
+  <h1>MY_Project_My_app</h1>
+
+</div>
+
+{% endblock%}
