--- a/GT_cbv/cbv_app/templates/cbv_app/school_detail.html
+++ b/GT_cbv/cbv_app/templates/cbv_app/school_detail.html
@@ -3,8 +3,14 @@
 <div class="jumbotron">
   <h2>Welcome to school details page </h2>
   <h3>School details: </h3>
-  <p>Name: {{schools_detail.name}} </p>
-  <p>Principal: {{schools_detail.principal}}</p>
-  <p>Location :{{school_detail.location}}</p>
+  <p>Name: {{school_details.name}} </p>
+  <p>Principal: {{school_details.principal}}</p>
+  <p>Location :{{school_details.location}}</p>
+  <h3>Students:</h3>
+  {% for student in school_details.students.all %}
+
+  <p>{{student.name}} who is {{student.age}} years old.</p>
+
+  {% endfor %}
 </div>
 {% endblock %}
