--- a/GT_cbv/cbv_app/templates/cbv_app/school_list.html
+++ b/GT_cbv/cbv_app/templates/cbv_app/school_list.html
@@ -1,12 +1,12 @@
 {% extends "cbv_app/cbv_app_base.html" %}
 {% block body_block %}
 
-<h3>Welcome to list of  <span class="badge badge-secondary">Schools</span></h3>
+<h1>Welcome to list of  <span class="badge badge-secondary">Schools</span></h1>
 <ol>
-{% for school in schools_list %}
-<div class="container">
-  <h4> <li > {{school.name}}</li> </h4>
-</div>
+{% for school in school_list %}
+
+  <h2> <li > <a href="{{school.id}}/">{{school.name}}</a></li> </h2>
+
 
 {% endfor %}
   </ol>
